# transformer-cloud

./: .gitignore  README.md  pyproject.toml  requirements.txt  vit_fer.py
